v2.0/Developer_manuals/Building.adoc
:doctype: book

:stylesdir: ../stylesheets/
:stylesheet: etf.css
:linkcss:

:toc: macro
:toc-title: Table of contents
:toclevels: 2
:toc-position: left
:appendix-caption: Annex

:icons: font
:docinfo: shared

:source-highlighter: pygments
:pygments-style: autumn
:pygments-linenums-mode: inline

include::../General/Logo.adoc[]

:doc-warning-work-in-progress: false
:doc-title: Building ETF
:doc-status: approved
:doc-date: 2017-06-21
:doc-description: This manual describes how to build the ETF validator. Knowledge about maven, maven repositories and build management tools are required.
:doc-audience: Developers planning to build the ETF validator themselves
:doc-id: https://docs.etf-validator.net/v2.0/Developer_manuals/Building.html
:doc-lang: EN

include::../General/Document-metadata.adoc[]

== Changelog
[width="100%",options="header",cols="1,2,3"]
|===
|  *Date* | *Editor* | *Comments*
| 2017-05-02 | Jon Herrmann | document created
| 2017-06-21 | Clemens Portele | editorial updates
| 2017-07-12 | Jon Herrmann | Test driver development section
|===

<<<

toc::[]

<<<

include::../General/About-short.adoc[]

== Prerequisites

- link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java SE Development Kit JDK 8 installed]
- Ensure JAVA_HOME environment variable is set
- link:https://git-scm.com/downloads[Git installed]

== Accessing the source code

The code base of the web application can be cloned from link:https://github.com/interactive-instruments/etf-webapp[GitHub].

NOTE: because the ETF version 2 is not finally released, the next branch must be used.

[source,bash]
----
git clone -b next https://github.com/interactive-instruments/etf-webapp.git
----

== Compiling the source code

ETF uses link:https://gradle.org[Gradle] as build management tool. The gradle
wrapper script will automatically download the required Gradle version and
start the build process afterwards.

Dependencies are downloaded from the interactive instruments repositories.
Currently only the snapshot repository can be accessed with the credentials
etf-public-dev / etf-public-dev . This is automatically done by
default.

[NOTE]
====
The repository to be used is determined from the version.properties file.
Make sure the version is suffixed with "-SNAPSHOT". If necessary, change the
version in the version.properties file, for example to:

----
version = 2.0.0-SNAPSHOT
----
====


.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat build
----

.On Linux execute
[source,bash]
----
$ ./gradlew build
----

== Running the web application

The web application can be started by executing the *jettyRun* task.

.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat jettyRunWar
----

.On Linux execute
[source,bash]
----
$ ./gradlew.sh jettyRunWar
----

The web application can then be accessed at link:http://localhost:8080[http://localhost:8080].

== Building other ETF components
The web application depends on several other ETF components:

- link:https://github.com/interactive-instruments/etf-core[etf-core] ETF core library including API and domain model
- link:https://github.com/interactive-instruments/etf-spi[etf-spi] ETF Service Provider Interface
- link:https://github.com/interactive-instruments/etf-bsxds[etf-bsxds] ETF data storage based on the BaseX database
- link:https://github.com/interactive-instruments/etf-suitd[etf-suitd] ETF SoapUI test driver
- link:https://github.com/interactive-instruments/etf-sui-ae[etf-sui-ae] ETF test driver adapter and extensions for SoapUI
- link:https://github.com/interactive-instruments/etf-sui-ae[etf-bsxtd] ETF BaseX test driver

The source code of the components must be cloned using GIT
(otherwise a 'repository not found' error occurs).

NOTE: because the ETF version 2 is not finally released, the next branches must be used.

Changed components can be installed into the local maven repository with the
gradle *install* command and be used by the etf-webapp component afterwards.

== Test driver development
Test drivers are released with the ETF web application. There are integrated
into the WAR file and extracted into the test driver directory at start up,
depending on the version numbers of existing test drivers. If the integrated
test drivers have a higher version number then the test drivers in the test
driver directory, the old test drivers are deleted and the new test drivers
are deployed and used.

This mechanism allows to update test drivers without redeploying the whole web
application.

If you are either developing and testing a test driver without changing the
version number or you are using a newer snapshot test driver, make sure the
latest test driver is deployed into the test driver directory.

This means that you need to manually overwrite the test driver or use the
`gradle install` task in the test driver project. To correctly run the
install task, you need to set the 'etf.td.deployment.dir' gradle property,
for example in the settings.gradle or in the system gradle.properties.

== FAQ
Q: I get a `repository not found` error.

A: The error occurs for example if the source code has been downloaded and not
cloned with GIT -or the directory has been copied without the hidden .git
directory. The build helper script (etf-bda) collects information from the
locally cloned GIT repository and includes the property `Implementation-Revision`
in the manifest file:
----
Manifest-Version: 1.0
Build-Date: 170601013212
Implementation-Version: 2.0.0
Build-Gradle: 3.5
Build-ii-bda: 1.0.24.1
Implementation-Revision: abf509f
Source-Compatibility: 1.8
Implementation-Build: 0
Build-Host: JAX
Build-User: herrmann
Build-JDK: 1.8.0_102
----
You can fix the problem by cloning the repository from GitHub using GIT.

***

include::../General/Legal_Privacy.adoc[]
