v2.1/Developer_manuals/Building.adoc
:doctype: book

:stylesdir: ../stylesheets/
:stylesheet: etf.css
:linkcss:

:toc: macro
:toc-title: Table of contents
:toclevels: 2
:toc-position: left
:appendix-caption: Annex

:icons: font
:docinfo: shared

:source-highlighter: pygments
:pygments-style: autumn
:pygments-linenums-mode: inline

include::../General/Logo.adoc[]

:doc-warning-work-in-progress: false
:doc-title: Building ETF
:doc-status: not approved
:doc-date: 2022-08-17
:doc-description: This manual describes how to build the ETF validator. Knowledge about maven, maven repositories and build management tools are required.
:doc-audience: Developers planning to build the ETF validator themselves
:doc-id: https://docs.etf-validator.net/v2.0/Developer_manuals/Building.html
:doc-lang: EN

include::../General/Document-metadata.adoc[]

== Changelog
[width="100%",options="header",cols="1,2,3"]
|===
|  *Date* | *Editor* | *Comments*
| 2017-05-02 | Jon Herrmann | document created
| 2017-06-21 | Clemens Portele | editorial updates
| 2017-07-12 | Jon Herrmann | Test driver development section
| 2022-08-17 | Guadaltel | Updated to v2.1
|===

<<<

toc::[]

<<<

include::../General/About-short.adoc[]

== Prerequisites

- link:https://jdk.java.net/archive/[OpenJDK 11 is installed]
- Ensure JAVA_HOME environment variable is set
- link:https://git-scm.com/downloads[Git installed]
- link:https://www.eclipse.org/jetty/download.php[Jetty 9 installed]

== Accessing the source code

The already compiled .war archive in link:https://github.com/etf-validator/etf-webapp/releases/tag/2.1.0-rc.1[etf-webapp.war]

However you can compile it youself. For this option, the code base of the web application can be cloned from link:https://github.com/etf-validator/etf-webapp[GitHub].

NOTE: because the ETF version 2.1 is not finally released, the next branch must be used.

[source,bash]
----
git clone -b next https://github.com/etf-validator/etf-webapp.git
----

== Compiling the source code

ETF uses link:https://gradle.org[Gradle] as build management tool. The gradle
wrapper script will automatically download the required Gradle version and
start the build process afterwards.

Dependencies are downloaded from the interactive instruments repositories.
Currently only the snapshot repository can be accessed with the credentials
etf-public-dev / etf-public-dev . This is automatically done by
default.

[NOTE]
====
The repository to be used is determined from the version.properties file.
Make sure the version is suffixed with "-SNAPSHOT". If necessary, change the
version in the version.properties file, for example to:

----
version = 2.1.0-SNAPSHOT
----
====


.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat build
----

.On Linux execute
[source,bash]
----
$ ./gradlew build install spotlessApply -x test
----
== Including Test drivers to the web application

The test drivers are not included by default in the etf-webapp. So, to be able to use them and have access to all the tests that ETF offer, they should be added before the run of the web application. To do so you can download them already built or bouild them yourselves. For the first option they can be download using these links:



To build them yourself, first they should be cloned from these links:

- link:https://github.com/etf-validator/etf-bsxtd.git[etf-bsxtd] ETF test driver for running BaseX XQuery based test projects
- link:https://github.com/etf-validator/etf-tetd.git[etf-tetd] ETF test driver for executing Test Suites on a remote OGC TEAM Engine instance
- link:https://github.com/etf-validator/etf-suitd.git[etf-suitd] ETF test driver for running SoapUI based test projects

Test drivers then should be built with the following commands:

- For etf-bsxtd: 

.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat build install
----
.On Linux execute
[source,bash]
----
$ ./gradlew build install
----

- For etf-suitd: 

.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat build install -x test
----
.On Linux execute
[source,bash]
----
$ ./gradlew build install -x test
----

- For etf-tetd: 

.On a Windows command line run
[source,cmd]
----
C:\etf-webapp> gradlew.bat build install spotlessApply -x test
----
.On Linux execute
[source,bash]
----
$ ./gradlew build install spotlessApply -x test
----

NOTE: Option "-x test" skips tests, while "spotlessApply" solves issues regarding code formatting.

After you have the compiled .jar archives, in order to deploy the ETF, we have to start from etf-webapp and create a folder named "testdrivers" inside the war file where to place the previous compilated .jar files (etf-suitd-legacy-2.1.0-SNAPSHOT.jar, etf-tetd-1.1.0-SNAPSHOT.jar, etf-bsxtd-legacy-2.1.0-SNAPSHOT.jar) in it.

== Running the web application

Copy the etf-webapp.war file to JETTY_HOME/webapps or if you have created a JETTY_BASE, then copy the etf-webapp.war file to JETTY_BASE/webapps.

NOTE: The default JETTY_HOME is located at **/usr/share/jetty9**. In case you downloaded it form a browser, JETTY_HOME would be where are the folders containing jetty9.

Initiate Jetty 9 using **java -jar start.jar** in JETTY_HOME or JETTY_BASE, in case you have one. If it doesn't work you can use **JETTY_HOME/bin/jetty.sh start** or **JETTY_HOME/bin/jetty.sh run**.


[NOTE]
====
If issues arise in the deployment, we probably need to manually add the following libraries to etf-webapp.war/WEB-INF/lib/ in order to make the deployment work properly:

    - link:https://repo1.maven.org/maven2/org/bouncycastle/bcprov-jdk18on/1.71/bcprov-jdk18on-1.71.jar[bcprov-jdk18on-171.jar]
    - link:https://repo1.maven.org/maven2/org/apache/flex/blazeds/flex-messaging-core/4.7.3/flex-messaging-core-4.7.3.jar[flex-messaging-core-4.7.3.jar]
    - link:https://repo.b3p.nl/nexus/repository/public/com/btr/proxy-vole/20131209/proxy-vole-20131209.jar[proxy-vole-20131209.jar]
    - link:https://repo1.maven.org/maven2/wsdl4j/wsdl4j/1.6.2/wsdl4j-1.6.2.jar[wsdl4j-1.6.2.jar]
    - link:https://repo1.maven.org/maven2/xmlunit/xmlunit/1.6/xmlunit-1.6.jar[xmlunit-1.6.jar]
====

The web application can then be accessed at link:http://localhost:8080[http://localhost:8080/etf-webapp].

NOTE: To stop the process in case of using *java -jar start.jar* or *JETTY_HOME/bin/jetty.sh run*, use *CTRL+C*. In case of using *JETTY_HOME/bin/jetty.sh start*, use *JETTY_HOME/bin/jetty.sh stop*.

== Building other ETF components
The web application depends on several other ETF components:

- link:https://github.com/etf-validator/etf-core[etf-core] ETF core library including API and domain model
- link:https://github.com/etf-validator/etf-spi[etf-spi] ETF Service Provider Interface
- link:https://github.com/etf-validator/etf-bsxds[etf-bsxds] ETF data storage based on the BaseX database
- link:https://github.com/etf-validator/etf-sui-ae[etf-sui-ae] ETF test driver adapter and extensions for SoapUI

The source code of the components must be cloned using GIT
(otherwise a 'repository not found' error occurs).

NOTE: because the ETF version 2.1 is not finally released, the next branches must be used.

Changed components can be installed into the local maven repository with the
gradle *install* command and be used by the etf-webapp component afterwards.

== Test driver development
Test drivers are released with the ETF web application. There are integrated
into the WAR file and extracted into the test driver directory at start up,
depending on the version numbers of existing test drivers. If the integrated
test drivers have a higher version number then the test drivers in the test
driver directory, the old test drivers are deleted and the new test drivers
are deployed and used.

This mechanism allows to update test drivers without redeploying the whole web
application.

If you are either developing and testing a test driver without changing the
version number or you are using a newer snapshot test driver, make sure the
latest test driver is deployed into the test driver directory.

This means that you need to manually overwrite the test driver or use the
`gradle install` task in the test driver project. To correctly run the
install task, you need to set the 'etf.td.deployment.dir' gradle property,
for example in the settings.gradle or in the system gradle.properties.

== FAQ
Q: I get a `repository not found` error.

A: The error occurs for example if the source code has been downloaded and not
cloned with GIT -or the directory has been copied without the hidden .git
directory. The build helper script (etf-bda) collects information from the
locally cloned GIT repository and includes the property `Implementation-Revision`
in the manifest file:
----
Manifest-Version: 1.0
Build-Date: 170601013212
Implementation-Version: 2.0.0
Build-Gradle: 3.5
Build-ii-bda: 1.0.24.1
Implementation-Revision: abf509f
Source-Compatibility: 1.8
Implementation-Build: 0
Build-Host: JAX
Build-User: herrmann
Build-JDK: 1.8.0_102
----
You can fix the problem by cloning the repository from GitHub using GIT.

Q: I obtain different sizes in the war or jar files when I compile them in my environment 
than the size of the released artifacts.

A: These differences result from several local system properties that are collected by the build system and included in the manifest file.


***

include::../General/Legal_Privacy.adoc[]
